Fix vertical align for sidebar

--- a/css/styles.css
+++ b/css/styles.css
@@ -11358,7 +11358,6 @@ p.lead {
   }
   #sideNav .navbar-brand {
     display: flex;
-    margin: auto auto 0;
     padding: 0.5rem;
   }
   #sideNav .navbar-brand .img-profile {
